@@ -25,6 +25,7 @@ Contributors in alphabetical order:
         Thomas Svedberg		<thsv@am.chalmers.se>
 	Erik Svensson		<eriksv@math.chalmers.se>	erik
 	Harald Svensson		<harald.s@home.se>		harald
+        Andy Terrel             <aterrel@uchicago.edu>
 	Jim Tilander		<jt@dd.chalmers.se>
 	Garth N. Wells  	<g.n.wells@citg.tudelft.nl>
 	Walter Villanueva	<PDE project course 2001/2002>
